# pydata-federal-contributions

./: .gitignore  .nojekyll  _quarto.yml  index.html  pyproject.toml  references.dvc  robots.txt  search.json  sitemap.xml
_site/notebooks/: 1.0-daveg-long-island-zipcodes.html  2.0-daveg-long-island-contributors.html
data/processed/: .gitignore  individual_2020_li.parquet.dvc
data/raw/: .gitignore  by_date.dvc
notebooks/: 1.0-daveg-long-island-zipcodes.html  1.0-daveg-long-island-zipcodes.ipynb  2.0-daveg-long-island-contributors.ipynb  3.0-daveg-long-island-contributions.html  3.0-daveg-long-island-contributions.ipynb  keplergl_map.html
site_libs/bootstrap/: bootstrap.min.css
