[tool.poetry]
name = "pydata-federal-contributions"
version = "0.1.0"
description = ""
authors = ["oneextrafact <1extrafact@gmail.com>"]
readme = "README.md"
packages = [{include = "pydata_federal_contributions"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
